updated plugin doc

--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 JSMask
 ======
 
-    JS Mask JavaScript framework, version 0.1
+    JS Mask JavaScript framework, version 0.1.1
 
 
 Example
@@ -14,6 +14,6 @@ Example
     <%= text_field_with_js_mask :post, :date, :class => 'mask_date_br' -%>
 
  For more examples, see icon creative:
- * http://blog.iconcreative.net/tags/jsmask
+ * http://railsbox.org/tags/jsmask
 
-Copyright (c) 2008 Ozéias Sant'ana <ozeias@iconcreative.net> and <oz.santana@gmail.com>, released under the MIT license
+Copyright (c) 2008 Ozéias Sant'ana <ozeias@railsbox.org> and <oz.santana@gmail.com>, released under the MIT license
